# plugin-sdk

./: CMakeLists.txt
safetyhook/: safetyhook.hpp
